--- a/citation.bib
+++ b/citation.bib
@@ -17,20 +17,21 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Susobhanan2022,
+@ARTICLE{Susobhanan2023,
        author = {{Susobhanan}, Abhimanyu},
         title = "{Post-Newtonian-accurate pulsar timing array signals induced by inspiralling eccentric binaries: accuracy, computational cost, and single-pulsar search}",
-      journal = {arXiv e-prints},
-     keywords = {General Relativity and Quantum Cosmology, Astrophysics - Instrumentation and Methods for Astrophysics},
-         year = 2022,
-        month = oct,
-          eid = {arXiv:2210.11454},
-        pages = {arXiv:2210.11454},
-          doi = {10.48550/arXiv.2210.11454},
+      journal = {Classical and Quantum Gravity},
+     keywords = {gravitational waves, pulsars, binaries, General Relativity and Quantum Cosmology, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2023,
+        month = aug,
+       volume = {40},
+       number = {15},
+          eid = {155014},
+        pages = {155014},
+          doi = {10.1088/1361-6382/ace234},
 archivePrefix = {arXiv},
        eprint = {2210.11454},
  primaryClass = {gr-qc},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv221011454S},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023CQGra..40o5014S},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
